--- a/src/pages/Todos/components/TodosList/index.module.scss
+++ b/src/pages/Todos/components/TodosList/index.module.scss
@@ -3,4 +3,6 @@
 .list {
   padding: 0;
   margin: 0;
+  height: 349px;
+  overflow-y: scroll;
 }
