--- a/src/pages/Todos/index.module.scss
+++ b/src/pages/Todos/index.module.scss
@@ -3,10 +3,9 @@
 .wrapper {
   @extend %border-radius;
   width: $content-width;
-  height: 400px;
   border: 1px solid $black;
-  overflow-x: clip;
-  overflow-y: scroll;
+  height: 399px;
+  overflow: clip;
 }
 
 .topRow {
@@ -14,6 +13,11 @@
   justify-content: space-between;
   padding: calc(2 * $pad);
   border-bottom: 1px solid $black;
+}
+
+.search {
+  font-size: 1em;
+  padding: $pad;
 }
 
 .newBtn {
